[tool.poetry]
name = "sqlalchemy-file"
version = "0.2.0"
description = "SQLAlchemy-file is a SQLAlchemy extension for attaching files to SQLAlchemy model and uploading them to various storage."
authors = ["Jocelin Hounon <hounonj@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://jowilf.github.io/sqlalchemy-file"
repository = "https://github.com/jowilf/sqlalchemy-file"
keywords = ["sqlalchemy", "sqlmodel", "file-upload", "apache-libcloud"]
classifiers = [
    'Development Status :: 4 - Beta',
    "Framework :: AsyncIO",
    'Environment :: Web Environment',
    'Intended Audience :: Developers',
    "License :: OSI Approved :: MIT License",
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    "Topic :: Database",
    "Topic :: Database :: Database Engines/Servers",
]

[tool.poetry.dependencies]
python = "^3.7"
SQLAlchemy = ">=1.4,<1.5"
apache-libcloud = ">=3.6.0,<3.7"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
mypy = "0.991"
black = "22.10.0"
ruff = "0.0.143"
sqlmodel = "^0.0.8"
Pillow = "^9.3.0"
fasteners = "^0.18"
coverage = { extras = ["toml"], version = "^6.5.0" }
mkdocs-material = "^8.5.10"
PyMySQL = { extras = ["rsa"], version = "^1.0.2" }
psycopg2-binary = "^2.9.5"
mkdocstrings = { extras = ["python"], version = "^0.19.0" }
fastapi = "^0.87.0"
uvicorn = "^0.20.0"
python-multipart = "^0.0.5"
Flask = "^2.2.2"
Flask-SQLAlchemy = "^2.5.1"
importlib-metadata = { version = "<5.0", python = "<=3.7" }


[tool.coverage.report]
fail_under = 95
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]

[tool.coverage.run]
parallel = true
command_line = "-m pytest"
source = ["sqlalchemy_file", "tests"]

[tool.ruff]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "C", # flake8-comprehensions
    "B", # flake8-bugbear
]
ignore = ["E501", "B904"]

[tool.ruff.isort]
known-third-party = ["sqlalchemy_file"]

[tool.mypy]
strict = true


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
