[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sqlalchemy-file"
description = "SQLAlchemy-file is a SQLAlchemy extension for attaching files to SQLAlchemy model and uploading them to various storage."
readme = "README.md"
license = "MIT"
requires-python = ">=3.7"
keywords = ["sqlalchemy", "sqlmodel", "file-upload", "apache-libcloud"]
authors = [
    { name = "Jocelin Hounon", email = "hounonj@gmail.com" },
]
classifiers = [
    'Development Status :: 4 - Beta',
    "Framework :: AsyncIO",
    'Environment :: Web Environment',
    'Intended Audience :: Developers',
    "License :: OSI Approved :: MIT License",
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    "Topic :: Database",
    "Topic :: Database :: Database Engines/Servers",
]
dependencies = [
    "SQLAlchemy >=1.4, <2.1",
    "apache-libcloud >=3.6, <3.8",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://jowilf.github.io/sqlalchemy-file"
Documentation = "https://jowilf.github.io/sqlalchemy-file"
Repository = "https://github.com/jowilf/sqlalchemy-file"
Changelog = "https://jowilf.github.io/sqlalchemy-file/changelog/"

[project.optional-dependencies]
test = [
    "pytest >=7.2.0, <7.5.0",
    "mypy ==1.4.1",
    "ruff ==0.0.278",
    "black ==23.7.0",
    "coverage >=7.0.0, <7.3.0",
    "fasteners ==0.18",
    "PyMySQL[rsa] >=1.0.2, <1.1.0",
    "psycopg2-binary >=2.9.5, <3.0.0",
    "Pillow >=9.4.0, <10.1.0",
    "python-multipart ==0.0.6",
    "fastapi >=0.92, <0.96",
    "Flask >=2.2, <2.3",
    "Flask-SQLAlchemy >=3.0,<3.1"
]
doc = [
    "mkdocs-material >=9.0.0, <10.0.0",
    "mkdocstrings[python] >=0.19.0, <0.23.0"
]
dev = [
    "pre-commit >=2.20.0, <4.0.0",
    "uvicorn >=0.20.0, <0.22.0",
]

[tool.hatch.envs.default]
features = [
    "test",
    "dev"
]
[tool.hatch.envs.default.scripts]
format = [
    "ruff sqlalchemy_file tests --fix",
    "black ."
]

[tool.hatch.envs.test]
features = [
    "test",
]
[tool.hatch.envs.test.scripts]
lint = [
    "mypy sqlalchemy_file",
    "ruff sqlalchemy_file tests",
    "black . --check"
]
run = "coverage run -m pytest tests"
cov = [
    "coverage combine",
    "coverage report --show-missing",
    "coverage xml"
]

[[tool.hatch.envs.test.matrix]]
sqla_version = ["1.4.x", "2.0.x"]

[tool.hatch.envs.test.overrides]
matrix.sqla_version.dependencies = [
    { value = "SQLAlchemy >=2.0, <2.1", if = ["2.0.x"] },
    { value = "SQLAlchemy >=1.4, <1.5", if = ["1.4.x"] },
    { value = "sqlmodel ==0.0.8", if = ["1.4.x"] },
]
matrix.sqla_version.scripts = [
    { key = "run", value = 'coverage run -m pytest tests --ignore=tests/test_sqlmodel.py', if = ["2.0.x"] },
    { key = "cov", value = '', if = ["2.0.x"] },
]

[tool.hatch.envs.docs]
features = [
    "doc",
]
[tool.hatch.envs.docs.scripts]
serve = "mkdocs serve -a localhost:8080"
build = "mkdocs build"
deploy = "mkdocs gh-deploy --force"

[tool.hatch.version]
path = "sqlalchemy_file/__init__.py"

[tool.coverage.report]
fail_under = 99
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]

[tool.coverage.run]
parallel = true
command_line = "-m pytest"
source = ["sqlalchemy_file", "tests"]

[tool.ruff]
select = [
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "C90", # mccabe
    "D", # pydocstyle
    "E", # pycodestyle errors
    "ERA", # eradicate
    "F", # pyflakes
    "I", # isort
    "N", # pep8-naming
    "PIE", # flake8-pie,
    "PLC", # pylint - convention
    "PLE", # pylint - error
    "PLW", # pylint - warning
    "Q", # flake8-quotes
    "RET", # flake8-return,
    "RUF", # Ruff-specific rules
    "SIM", # flake8-simplify
    "UP", # pyupgrade
    "W", # pycodestyle warnings
]
ignore = ["E501", "B904", "B008", "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107", "D205"]
target-version = "py38"

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.isort]
known-third-party = ["sqlalchemy_file"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"docs_src/**" = ["N999"]

[tool.mypy]
strict = true
warn_unused_ignores = false

[tool.hatch.build.targets.wheel]
[tool.hatch.build.targets.sdist]
include = ["sqlalchemy_file"]
